tests/paczka1/small_fuzzy/10456673.err
Error in line 1: W6QyaKcq A86 23,5
Error in line 5: wPmwMx1 S81 6,2
Error in line 3: WoogDVzlW A86 41,8
